--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
   compile('com.github.afollestad.material-dialogs:core:0.8.5.8@aar') {
     transitive = true
   }
+  compile 'com.jjoe64:graphview:4.0.1'
 }
